# python-project-49

./: README.md  makefile  pyproject.toml
brain_games/: cli.py  start_game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py  start_game.py  welcome_user.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  start_game.py  welcome_user.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
